fix: shift chevron alignment

--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -273,7 +273,7 @@
       right: 1.75rem;
 
       @media #{core.$screen-lg-up} {
-        right: 1rem;
+        right: 1.25rem;
       }
     }
   }
